[package]
name = "pushdown-automaton-macro"
description = "Macro generator for state machine, implementing pushdown automaton"
repository = "https://github.com/awpteamoose/state_machine"
readme = "README.md"
license = "MIT License"
livense-file = "LICENSE"

version = "0.2.0"
authors = ["Dmitriy Pogretskiy <dpogretskiy@gmail.com>", "Awpteamoose <awpteamoose@gmail.com>"]

[dependencies]
